v3/cypress/fixtures/invalid-docs/numeric-version.codap
{
    "type": "CODAP",
    "version": 1234
}
